--- a/package.json
+++ b/package.json
@@ -27,10 +27,8 @@
     "webpack-merge": "^5.10.0"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.7.19",
-    "@heroicons/vue": "^2.1.1",
+    "primevue": "^3.50.0",
     "vue-router": "^4.3.0",
-    "vue-snap": "^1.0.0-alpha.5",
     "vue3-carousel": "^0.3.1"
   },
   "jest": {
