--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "scripts": {
-    "dev": "webpack serve --config webpack/webpack.dev.js",
+    "start": "webpack serve --config webpack/webpack.dev.js",
     "build": "webpack --config webpack/webpack.prod.js",
     "lint": "eslint --ext .js,.vue src",
-    "test": "jest"
+    "test": "jest",
+    "everything": "npm run lint && npm run test && npm run build"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
@@ -28,8 +29,7 @@
   },
   "dependencies": {
     "primevue": "^3.50.0",
-    "vue-router": "^4.3.0",
-    "vue3-carousel": "^0.3.1"
+    "vue-router": "^4.3.0"
   },
   "jest": {
     "moduleFileExtensions": [
