--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@babel/preset-env": "^7.24.0",
+    "@pinia/testing": "^0.1.3",
     "@vue/test-utils": "^2.4.5",
     "@vue/vue3-jest": "^29.2.6",
     "babel-jest": "^29.7.0",
@@ -28,6 +29,7 @@
     "webpack-merge": "^5.10.0"
   },
   "dependencies": {
+    "pinia": "^2.1.7",
     "primevue": "^3.50.0",
     "vue-router": "^4.3.0"
   },
